app/assets/stylesheets/application.css.scss
  
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require bootstrap-datepicker
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";

html body { 
background: url(bg.jpg) no-repeat center center fixed; 
-webkit-background-size: cover;
-moz-background-size: cover;
-o-background-size: cover;
background-size: cover;
}
.content{
  margin: auto;
}
@media (min-width: 768px) {
  .content {
    width: 768px;
  }
}
@media (min-width: 960px) {
  .content {
    width: 955px;
  }
}
@media (min-width: 1200px) {
  .content {
    width:  800px;
  }
}
/* header */
.navbar-default .navbar-nav > li > a > span.glyphicon-log-out{
  color: rgb(245, 0, 0);
  text-shadow: 0 0 4px grey;
  &:hover{
    color: red;
    text-shadow: 0 0 6px red;
  }
}

ul.navbar-form.navbar-left{
  color: grey;
}

/* footer */

footer {
	position: absolute;
   
    width: 80%;
    left: 10%;
 	height: 25px;
  
  /*border-bottom: 1px solid $grayMediumLight;*/
  color: #D3D3D3;
  a {
    color: $gray;
    &:hover {
      color: #737373;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}
                                                      /*pages style*/
.stroked{text-decoration: line-through;}
.input-group.add_tast_to_project{width: 97%;}
.input-group.edit_project_name{width: 100%;}

table.table{                                                                 /*tables*/
  min-width: 450px;
  margin-bottom: 80px;
  }    
thead tr:first-child { background: linear-gradient(to top, #1462b5, #429cfb);}
thead tr:nth-child(2) { 
  background: rgb(211,211,211);
  border: 0;
}
tbody{
  background: white;
}
/*tbody tr td {background: #FFFFFF;}*/
  tr:last-child td:first-child {border-radius: 0 0 0 10px!important;}
  tr:last-child td:last-child {border-radius: 0 0 10px 0!important;}

tbody tr:hover{
 background-color: #ffe!important; /* Цвет фона */
  .control, .control>a{
    color: rgba(176,196,222, 0.8);
  }
}
th.project_name{                                                          /*for projects name*/
  font: bold 130% serif;
  text-shadow: 0 0 8px rgba(0,0,0,0.6); /* Параметры тени */
  color: white;
}
.add_tast_to_project_form{
  font:  100% serif;
  text-shadow: 0 0 4px rgba(211,211,211,0.9)
}
td.tasks{ /*color of tasks name*/
  color: rgba(122,156,199, 0.9);
  text-shadow: 0 0 2px rgba(0,0,0,0.2); /* Параметры тени */
}
td, th {
  vertical-align: middle!important;
}
.control, .control>a{
  width: 15px;
  height: 17px;
  color: transparent;
  .glyphicon:hover{
    cursor:pointer;
    color: rgba(122,156,199, 0.8);
  } 
}
/*tbody tr.put_task_after_me{
  background-color: rgba( 211,211,211, 0.5)!important; /* Цвет фона */
/*}*/
.inline{display: inline;}

.control_left_side{
  width: 15px;
  height: 17px;
  .glyphicon-plus-sign{
    vertical-align: middle; 
    color: green;
  }
  .glyphicon-hourglass{
    padding-left: 3px;
    color: rgba(255,255,255, 0.8);
  }
}
.glyphicon.control_right_side{
  color: rgba(211,211,211, 0.9); 
}

a{
  color: rgba(176,196,222, 0.8);
  text-decoration: none!important; /* Убирает подчеркивание для ссылок */
} 
.select_deadline_field_input{
  width: 108px;
}

.save_deadline_send_ajax{
  text-shadow: 1px 1px 2px black, 0 0 1em blue;
  border-left: 1px solid grey;
  padding-left: 4px;
  padding-right: 4px;
}
.save_deadline_field{
  padding-left: 8px;
  padding-right: 4px;
}

img.ajax_loader{
  visibility: hidden;
  position: fixed;
  z-index: 5;
  top: 50%;
  left: 50%;
  height: 35px;
  width: 35px;
  margin: -15px 0 0 -15px;
}

.left_days{
  width: 77px;
  height: 15px;
  color: grey;
  padding-right: 0px!important;
  padding-left: 1px!important;
}
a#add_project{
  margin-left: calc(50% - 94px);
}

